--- a/GoIT/markup/lesson7-8/css/mediaqueries.css
+++ b/GoIT/markup/lesson7-8/css/mediaqueries.css
@@ -1,5 +1,7 @@
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
 	
+/* HEADER */
+
 .header{
 	height: 798px;
 }
@@ -66,25 +68,122 @@
 	max-width: 47.5%;
 }
 
+.menu__slider{
+	margin-right: 20%;
+    padding-top: 27px;
+}
+
 .menu__item-slider{
 	margin: 0;
 }
 
+/* END OF HEADER */
+
+/* MAIN */
+
+/* VIOLET BLOCK*/
+
+.heading4{
+	font-size: 24px;
+}
+
+.article__text--violet_block{
+	height: 142px;
+}
+
+/* END OF VIOLET BLOCK */
+
+/* NEWS BLOCK */
+
+.heading4--gray{
+	display: block;
+	margin-bottom: 0;
+}
+
+.article__text--news{
+	overflow: hidden;
+	height: 142px;
+}
+
+.article__left--news{
+    margin-left: 20px;
+    width: 44%;
+}
+
+.article__right--news{
+	margin-right: 20px;
+    width: 44%;
+}
+
+.article__text--news--bold{
+	height: auto;
+}
+
+.article__text--news--line{
+	height: 26px;
+}
+
+.article__link--news{
+	display: none;
+}
+
+.article__link--news--768{
+	display: block;
+}
+
+/* END OF NEWS */
+
+/* IMAGES*/
+
+.menu__item--images{
+	margin: 0 24px;
+}
+
+/* END OF IMAGES*/
+
+/* COMMENTS BLOCK */
+
+.article__text--comments{
+	overflow: hidden;
+	height: 170px;
+}
+
+
+
+/* END OF COMMENTS */
+
+/* END OF MAIN */
+
+/* FOOTER */
+
+.footer{
+	height: 200px;
+}
+
+.menu--footer{
+	margin-left: 20px;
+	width: 95%;
+}
+
+.menu__item--footer{
+	margin: 0 40px 0 0;
+}
+
+.footer__text{
+	margin: 40px 0 0 0;
+}
+
+/* END OF FOOTER */
 
 
 
 
-
-
-
-
-
-@media screen and (max-width: 480px) {
+@media (max-width: 480px) {
 
 
 }
 
-@media screen and (max-width: 320px) {
+@media (max-width: 320px) {
 
 
 }
