--- a/GoIT/markup/lesson7-8/css/style.css
+++ b/GoIT/markup/lesson7-8/css/style.css
@@ -26,7 +26,6 @@ html, body{
 /* HEADER */
 
 .header{
-	height: 846px;
 	background: url(../img/header_bg.jpg) 100% 100% no-repeat;
 	background-size: cover;
 	border-bottom: 1px solid #34263b;
@@ -48,8 +47,8 @@ html, body{
 }
 
 .heading2--header{
-	float: left;
-	margin: 66px 0 164px 0;
+	/*float: left;*/
+	/*margin: 66px 0 164px 0;*/
 	color: white;
 	text-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
 }
@@ -67,24 +66,24 @@ html, body{
 	color: transparent;
 }
 
-.menu{
+/*.menu{
     float: right;
-}
+}*/
 
 .menu--header{
 	font-size: 24px;
-	width: 79%;
-	margin-top: 74px;
+	/*width: 79%;*/
+	/*margin-top: 74px;*/
 }
 
 .menu__item{
-    display: inline-block;
-    float: right;
-    margin-left: 6.4%;
+    /*display: inline-block;*/
+    /*float: right;*/
+   /* margin-left: 6.4%;*/
 }
 
 .menu__item--last{
-	margin-left: 0;
+	/*margin-left: 0;*/
 }
 
 .menu__link{
@@ -98,8 +97,8 @@ html, body{
 }
 
 .menu__link--header{
-	padding: 0px 7px 2px 3px;
-	margin: 0px -7px 0px 0;
+	/*padding: 0px 7px 2px 3px;*/
+	/*margin: 0px -7px 0px 0;*/
 }
 
 .menu__link--header:hover{
@@ -622,3 +621,5 @@ html, body{
 }
 
 /* END OF FOOTER */
+
+}
