--- a/GoIT/markup/lesson7-8/css/temp.css
+++ b/GoIT/markup/lesson7-8/css/temp.css
@@ -1,31 +1,477 @@
-@font-face {
-    font-family: 'LeagueGothic';
-    src: url('../fonts/leaguegothic-regular-webfont.eot');
-    src: url('../fonts/leaguegothic-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/leaguegothic-regular-webfont.woff') format('woff'),
-         url('../fonts/leaguegothic-regular-webfont.ttf') format('truetype'),
-         url('../fonts/leaguegothic-regular-webfont.svg#league_gothicregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-} 
-
-@font-face {
-    font-family: "OpenSans";
-    src: url("../fonts/OpenSansRegular.eot");
-    src: url("../fonts/OpenSansRegular.eot?#iefix")format("embedded-opentype"),
-		 url("../fonts/OpenSansRegular.woff") format("woff"),
-		 url("../fonts/OpenSansRegular.ttf") format("truetype");
-    font-style: normal;
-    font-weight: normal;
-}
-
-html, body{
-	height: 100%;
-}
+@media (min-width: 320px) {
 
 /* HEADER */
 
 .header{
+	height: 515px;
+}
+
+
+
+
+
+/* END OF HEADER */
+
+/* MAIN */
+
+/* VIOLET BLOCK*/
+
+/* END OF VIOLET BLOCK */
+
+/* NEWS BLOCK */
+
+/* END OF NEWS */
+
+/* IMAGES*/
+
+/* END OF IMAGES*/
+
+/* COMMENTS BLOCK */
+
+/* END OF COMMENTS */
+
+/* END OF MAIN */
+
+/* FOOTER */
+
+/* END OF FOOTER */
+
+}
+
+
+@media (min-width: 480px) {
+
+/* HEADER */
+
+.header{
+	height: 548px;
+}
+
+.heading2--header{
+	width: 100%;
+	text-align: center;
+	margin: 68px 0 24px 0;
+}
+
+.menu--header{
+	position: absolute;
+	overflow: hidden;
+	/*float: none;*/
+	padding: 0;
+	margin: 0;
+	top: 130px;
+	left: 117px;
+	width: 246px;
+	height: 38px;
+	transform: rotate(180deg);
+	text-align: center;
+	z-index: 1;
+	opacity: 0.9;
+}
+
+.menu__item{
+	margin: 0 auto;
+	display: none;
+	float: none;
+	transform: rotate(-180deg);
+	border-top: 1px solid #55425d;
+	border-bottom: 1px solid #3e3046;
+}
+
+.menu__item--first{
+	border-bottom: none;
+}
+
+.menu__item--last{
+	display: block;
+	border-top: none;
+	border-bottom: none;
+}
+
+.menu__item:hover{
+	background: rgba(0,0,0,0.3);
+}
+
+.menu--header:hover{
+	height: auto;
+	background-color: #36293e;
+	border: 1px solid #051116;
+	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+	border-radius: 7px;
+	border: 1px solid #3f3247;
+	border-top: 1px solid #5f486a;
+	-webkit-box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.75);
+}
+
+.menu--header:hover .menu__item{
+	display: block;
+}
+
+.menu__link{
+	padding: 0;
+	margin: 0;
+	line-height: 33px;
+}
+
+.menu--header:hover .menu__link--current{
+	display: inline;
+	padding: 0 3px;
+	border-bottom: 3px solid #edbfff;
+}
+
+/* END OF HEADER */
+
+/* MAIN */
+
+/* VIOLET BLOCK*/
+
+/* END OF VIOLET BLOCK */
+
+/* NEWS BLOCK */
+
+/* END OF NEWS */
+
+/* IMAGES*/
+
+/* END OF IMAGES*/
+
+/* COMMENTS BLOCK */
+
+/* END OF COMMENTS */
+
+/* END OF MAIN */
+
+/* FOOTER */
+
+/* END OF FOOTER */
+
+}
+
+
+@media (min-width: 768px) {
+	
+/* HEADER */
+
+.header{
+	height: 802px;
+}
+
+.heading2--header{
+	margin: 70px 0 0 20px;
+}
+
+.menu--header{
+	position: static;
+	overflow: visible;
+	box-sizing: border-box;
+	float:left;
+	margin: 29px 0 72px 0px;
+	padding-left: 17px;
+	height: auto;
+	width: 100%;
+	transform: rotate(0deg);
+	opacity: 1;
+}
+
+.menu--header:hover{
+	background: none;
+	border: none;
+	box-shadow: none;
+}
+
+.menu--header:hover .menu__link--current{
+	display: block;
+	padding: 0;
+	border-bottom: 3px solid #edbfff;
+}
+
+.menu__item{
+	display: inline-block;
+	float: right;
+	margin: 0 10px 0 0;
+	transform: rotate(0deg);
+	border: none;
+}
+
+.menu__item--first{
+	margin-right: 114px;
+}
+
+.menu__item:hover{
+	background: none;
+}
+
+.slider__wrapper{
+	margin: 0 auto;
+	width: 100%;
+}
+
+.slider__arrow--left{
+	margin-left: 0px;
+}
+
+.slider__arrow--right{
+	margin-right: 0px;
+}
+
+.heading1{
+	margin-bottom: 1px;
+	overflow: hidden;
+	height: 50px;
+	line-height: 50px;
+	font-size: 48px;
+}
+
+.heading3{
+	font-size: 24px;
+}
+
+.article--slider{
+	margin-top: 97px;
+	max-width: 37%;
+	margin-left: 2.604167%;
+}
+
+.article__text--slider{
+	overflow: hidden;
+	height: 100px;
+	font-size: 16px;
+	line-height: 25px;
+}
+
+.slider__img{
+	margin-top: -23px;
+	margin-right: 2.9%;
+	width: 274px;
+	max-width: 47.5%;
+}
+
+.menu__slider{
+    padding-top: 26px;
+    margin-right: 143px
+}
+
+.menu__item-slider{
+	margin: 0;
+}
+
+/* END OF HEADER */
+
+/* MAIN */
+
+/* VIOLET BLOCK*/
+
+.violet_block{
+	height: 342px;
+}
+
+.article--violet_block{
+	padding-top: 77px;
+}
+
+.article__left--violet_block{
+	background-position: -376px -67px;
+	padding-left: 83px;
+}
+
+.article__right--violet_block{
+	background-position: -375px -67px;
+	padding-left: 85px;
+}
+
+.article__center--violet_block{
+	background-position: -380px -67px;
+	padding-left: 80px;
+}
+
+.heading4{
+	font-size: 24px;
+	margin-bottom: 3px;
+}
+
+.article__text--violet_block{
+	height: 142px;
+}
+
+.article__link{
+	margin-top: 10px;
+}
+
+.article__link--left{
+	margin-right: 25px;
+}
+
+.article__link--right{
+	margin-right: 23px;
+}
+
+.article__link--center{
+	margin-right: 28px;
+}
+/* END OF VIOLET BLOCK */
+
+/* NEWS BLOCK */
+
+.article__left--news{
+	padding-top: 29px;
+}
+
+.article__head{
+	margin-bottom: 8px;
+}
+
+.heading4--gray{
+	display: block;
+	margin-bottom: 0;
+}
+
+.article__text--news{
+	overflow: hidden;
+	height: 142px;
+}
+
+.article__left--news{
+    margin-left: 20px;
+    width: 46%;
+    letter-spacing: -0.5px;
+}
+
+.menu__news{
+	padding-top: 69px;
+	width: 91%;
+}
+
+.menu__item--news{
+	margin-right: 1px;
+}
+
+.article__right--news{
+	margin-right: 15px;
+    width: 44%;
+}
+
+.heading4--gray--less768{
+	font-size: 28px;
+	letter-spacing: 0.5px;
+}
+
+.article__text--news--bold{
+	height: auto;
+}
+
+.article__text--news--line{
+	height: 26px;
+}
+
+.article__link--news{
+	display: none;
+}
+
+.article__link--news--less768{
+	display: block;
+    margin: 15px 11px 0 0;
+    font-size: 19px;
+    letter-spacing: -0.5px;;
+}
+
+/* END OF NEWS */
+
+/* IMAGES*/
+
+.menu__item--images{
+	margin: 0 27px;
+}
+
+.menu__item--images--first{
+	margin-left: 0;
+}
+
+.menu__item--images--sixth{
+	margin-right: 0;
+}
+
+/* END OF IMAGES*/
+
+/* COMMENTS BLOCK */
+
+.article--comments{
+	width: 30%;
+	padding-top: 96px;
+}
+
+.article__left--comments{
+	display: none;
+}
+
+.article__left--comments--less768{
+	display: block;
+	margin-left: 20px;
+	width: 28%;
+}
+
+.article__right--comments{
+	margin-right: 19px;
+	width: 26%;
+}
+
+.article__center--comments{
+	display: none;
+}
+
+.article__center--comments--less768{
+	padding-left: 9px;
+	display: block;
+}
+
+.heading4--comments{
+	margin-bottom: 9px;
+}
+
+.article__text--comments{
+	overflow: hidden;
+	height: 170px;
+}
+
+/* END OF COMMENTS */
+
+/* END OF MAIN */
+
+/* FOOTER */
+
+.footer{
+	height: 200px;
+}
+
+.menu--footer{
+	margin-left: 20px;
+	width: 95%;
+}
+
+.menu__item--footer{
+	margin: 0 44px 0 0;
+}
+
+.footer__text{
+	margin: 34px 20px 0 0;
+	letter-spacing: -0.4px;
+}
+
+.footer__text--bold{
+	padding-left: 4px;
+    letter-spacing: -0.2px;
+}
+
+/* END OF FOOTER */
+
+
+@media (min-width: 960px) {
+
+/* HEADER */
+
+.header{
+	height: 846px;
 	background: url(../img/header_bg.jpg) 100% 100% no-repeat;
 	background-size: cover;
 	border-bottom: 1px solid #34263b;
@@ -47,6 +493,8 @@ html, body{
 }
 
 .heading2--header{
+	float: left;
+	margin: 66px 0 164px 0;
 	color: white;
 	text-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
 }
@@ -64,14 +512,24 @@ html, body{
 	color: transparent;
 }
 
+.menu{
+    float: right;
+}
+
 .menu--header{
 	font-size: 24px;
+	width: 79%;
+	margin-top: 74px;
 }
 
 .menu__item{
+    display: inline-block;
+    float: right;
+    margin-left: 6.4%;
 }
 
 .menu__item--last{
+	margin-left: 0;
 }
 
 .menu__link{
@@ -85,6 +543,8 @@ html, body{
 }
 
 .menu__link--header{
+	padding: 0px 7px 2px 3px;
+	margin: 0px -7px 0px 0;
 }
 
 .menu__link--header:hover{
@@ -93,17 +553,20 @@ html, body{
 
 .slider{
 	position: relative;
-	margin-top: 190px;
+	clear: both;
+	height: 400px;
+	background: rgba(0,0,0,0.2);
 }
 
 .slider__wrapper{
 	margin: 0 auto;
-	width: 100%;
+	width: 94%;
+	max-width: 1555px;
 }
 
 .slider__arrow{
 	display: block;
-	margin-top: 15px;
+	margin-top: 183px;
 	width: 24px;
 	height: 35px;
 }
@@ -116,18 +579,21 @@ html, body{
 .slider__arrow--left{
 	float: left;
 	background: url(../img/icons.png) -3px -3px no-repeat;
+	margin-left: -19px;
 }
 
 .slider__arrow--right{
 	float: right;
 	background: url(../img/icons.png) -28px -3px no-repeat;
+	margin-right: -24px;
 }
 
 .heading1{
 	color: #fefefe;
 	font-family: LeagueGothic;
 	font-size: 60px;
-	line-height: 24px;
+	line-height: 36px;
+	margin-bottom: 10px;
 	letter-spacing: -0.3px;
 }
 
@@ -135,7 +601,7 @@ html, body{
 	color: #edbfff;
 	font-family: LeagueGothic;
 	font-size: 32px;
-	line-height: 24px;
+	line-height: 36px;
 	text-transform: uppercase;
 	overflow: hidden;
 	height: 36px;
@@ -146,9 +612,12 @@ html, body{
 }
 
 .article__left{
+	float: left;
 }
 
 .article--slider{
+	width: 52.1%;
+	margin: 90px 0 0 0;;
 }
 
 .article__text{
@@ -166,17 +635,20 @@ html, body{
 }
 
 .slider__img{
-	display: none;
+	float: right;
+	margin-right: 7.1%;
+	margin-top: -17px;;
 }
 
 .menu__slider{
-	margin-top: 80px;
-    width: 100%;
-    text-align: center;
+    padding-top: 76px;
+    margin-right: 17.3%;
+    clear: both;
 }
 
-.menu__item--slider{
-	display: inline-block;
+.menu__item-slider{
+	float: none;
+	margin-left: 0;
 }
 .menu__circles{
 	display: block;
@@ -201,7 +673,7 @@ html, body{
 
 .violet_block{
 	position: relative;
-	height: 596px;
+	height: 341px;
 	background: rgba(116,80,131,1);
 	background: -moz-linear-gradient(top, rgba(116,80,131,1) 0%, rgba(50,37,57,1) 100%);
 	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(116,80,131,1)), color-stop(100%, rgba(50,37,57,1)));
@@ -223,30 +695,33 @@ html, body{
 }
 
 .article__center{
+	float: none;
+	margin: 0 auto;
 }
 
 .article__right{
+	float: right;
 }
 
 .article--violet_block{
+	padding-top: 79px;
+	width: 33.33%;
+	height: 341px;;
 }
 
 .article__left--violet_block{
-	background: url(../img/icons.png) -400px -80px no-repeat;
-	padding-left: 50px;
-	padding-top: 70px;
+	background: url(../img/icons.png) -396px -63px no-repeat;
+	padding-left: 65px;
 }
 
 .article__right--violet_block{
-	background: url(../img/icons.png)  -400px -80px no-repeat;
-	padding-left: 50px;
-	padding-top: 66px;
+	background: url(../img/icons.png)  -443px 74px no-repeat;
+	padding-left: 101px;
 }
 
 .article__center--violet_block{
-	background: url(../img/icons.png) -400px -80px no-repeat;
-	padding-left: 50px;
-	padding-top: 80px;
+	background: url(../img/icons.png) -302px -187px no-repeat;
+	padding-left: 84px;
 }
 
 .heading4{
@@ -266,18 +741,17 @@ html, body{
 
 .article__text--violet_block{
 	overflow: hidden;
+	height: 120px;
 	color: white;
 	text-shadow: 0.5px 0.9px 0 #0f1518;
 	font-size: 16px;
 	line-height: 24px;
 	letter-spacing: -0.5px;
-	height: 70px;
 }
 
 .article__link{
 	float: right;
 	margin-top: 20px;
-	margin-right: 3px;
 	text-shadow: 0.5px 0.9px 0 #0f1518;
 	color: white;
 	font-family: LeagueGothic;
@@ -288,12 +762,17 @@ html, body{
 }
 
 .article__link--left{
+    margin-right: 38px;
+
 }
 
 .article__link--right{
+
 }
 
 .article__link--center{
+    margin-right: 15px;
+
 }
 
 .article__link:hover{
@@ -304,31 +783,38 @@ html, body{
 
 /* NEWS BLOCK */
 .news{
-	height: 785px;
+	height: 485px;
 	background-color: #f9f9f9;
 	border-bottom: 1px solid #e6e6e6;
 }
 
 .article--news{
+	margin-top: 131px;
 }
 
 .article__left--news{
+	width: 47.2%;
+	height: 372px;
+	padding-left: 63px;
+	margin-top: 99px;
+	padding-top: 32px;
 	background: url(../img/article_box.png) 0px 0px no-repeat;
-	margin-top: 97px;
-	padding-left: 60px;
-    padding-right: 45px;
+	padding-right: 30px;
 }
 
 .article__right--news{
+	width: 46.875%;
 }
 
 .article__head{
+	margin-bottom: 12px;
 }
 
 .heading4--gray{
 	padding-right: 5px;
 	color: #454545;
 	text-shadow: 0.5px 0.9px 0 white;
+	letter-spacing: 0;;;;
 }
 
 .heading4--pink{
@@ -338,11 +824,14 @@ html, body{
 
 .menu__news{
 	float: none;
+	width: 100%;
+	padding-top: 60px;
 	text-align: center;;
 }
 
 .menu__item--news{
     float: none;
+    margin: 0 4px  0 -4px;
 
 }
 
@@ -359,11 +848,14 @@ html, body{
 
 .news__link{
 	display: block;
+	margin-bottom: 17px;
+	padding-left: 67px;
 	text-decoration: none;
 }
 
 .news__link--recent{
 	background: url(../img/icons.png) -215px -319px no-repeat;
+	margin-top: 19px;
 }
 
 .news__link--category{
@@ -372,15 +864,14 @@ html, body{
 
 .news__link--blog{
 	background: url(../img/icons.png) -74px -437px no-repeat;
+	margin-bottom: 1px;
 }
 
 .article__text--news{
-	overflow: hidden;
-	height: 167px;
-	line-height: 24px;
 	text-shadow: 0.5px 0.9px 0 white;
 	color: #454545;
 	font-size: 16px;
+	line-height: 24px;
 	letter-spacing: -0.4px;
 }
 
@@ -390,6 +881,7 @@ html, body{
 }
 
 .article__link--news{
+	margin-right: 20px;
 	text-shadow: 0.5px 0.9px 0 white;
 	color: #454545;
 	line-height: 24px;
@@ -409,11 +901,12 @@ html, body{
 /* IMAGES BLOCK */
 
 .images{
+	height: 120px;
 	background: #f9f9f9;
 	border-bottom: 1px solid #d8d8d8;
 }
 
-.images__menu{
+.menu--images{
 	padding-top: 25px;
 	width: 100%;
 	float:none;
@@ -421,6 +914,7 @@ html, body{
 }
 
 .menu__item--images{
+	margin: 0 3.3%;
 	float: none;
 }
 
@@ -474,11 +968,15 @@ html, body{
 /* COMMENTS BLOCK */
 
 .comments{
+	height: 396px;
 	background: #ececec;
 }
 
 .article--comments{
 	overflow: hidden;
+	height: 307px;
+	padding-top: 94px;
+	width: 29.3%;
 }
 
 .article__left--comments--less768{
@@ -512,6 +1010,7 @@ html, body{
 
 .heading4--comments{
     display: block;
+    margin-top: 5px;
     letter-spacing: 0;
 
 }
@@ -529,16 +1028,21 @@ html, body{
 /* FOOTER */
 
 .footer{
+	height: 112px;
 	background: url(../img/footer_bg.jpg) 100% 100% no-repeat;
 	background-size: cover;
 }
 
 .menu--footer{
 	float: left;
+	margin-top: 46px;
 	font-size: 20px;
 }
 
 .menu__item--footer{
+    float: left;
+    margin: 0 44px  0 0;
+	
 }
 
 .menu__link--footer{
@@ -549,6 +1053,8 @@ html, body{
 }
 
 .footer__text{
+	float: right;
+	margin-top: 54px;
 	color: white;
 	font-family: OpenSans;
 	font-size: 12px;
@@ -563,4 +1069,3 @@ html, body{
 /* END OF FOOTER */
 
 }
-
