--- a/GoIT/markup/lesson7-8/css/style.css
+++ b/GoIT/markup/lesson7-8/css/style.css
@@ -209,16 +209,13 @@ html, body{
 	background: -ms-linear-gradient(top, rgba(116,80,131,1) 0%, rgba(50,37,57,1) 100%);
 	background: linear-gradient(to bottom, rgba(116,80,131,1) 0%, rgba(50,37,57,1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#745083', endColorstr='#322539', GradientType=0 );
-	-webkit-box-shadow: inset 0px -2px 0px 0px rgba(0,0,0,0.75);
-	-moz-box-shadow: inset 0px -2px 0px 0px rgba(0,0,0,0.75);
-	box-shadow: inset 0px -2px 0px 0px rgba(0,0,0,0.75);
+	-webkit-box-shadow: inset 0px -2px 0px 0px rgba(0,0,0,0.75), 0px 5px 10px -5px rgba(0,0,0,0.3);
+	-moz-box-shadow: inset 0px -2px 0px 0px rgba(0,0,0,0.75), 0px 5px 10px -5px rgba(0,0,0,0.3);
+	box-shadow: inset 0px -2px 0px 0px rgba(0,0,0,0.75), 0px 5px 5px -5px rgba(0,0,0,0.3);
 	border-bottom: 1px solid white;
 }
 
 .wrapper--violet_block{
-	-webkit-box-shadow: 0px 5px 10px -5px rgba(0,0,0,0.3);
-	-moz-box-shadow: 0px 5px 10px -5px rgba(0,0,0,0.3);
-	box-shadow: 0px 5px 5px -5px rgba(0,0,0,0.3);
 }
 
 .article__center{
@@ -303,7 +300,7 @@ html, body{
 }
 
 .article__left--news{
-	background: url(../img/article_box.png) 0px 0px no-repeat;
+	background: url(../img/article_box.png) 0px -18px no-repeat;
 }
 
 .article__right--news{
@@ -315,6 +312,7 @@ html, body{
 .heading4--gray{
 	display: block;
 	margin-bottom: 0;
+	padding-top: 3px;
 	padding-right: 5px;
 	color: #454545;
 	text-shadow: 0.5px 0.9px 0 white;
@@ -404,6 +402,9 @@ html, body{
 .images{
 	background: #f9f9f9;
 	border-bottom: 1px solid #d8d8d8;
+	-webkit-box-shadow: 0px 5px 10px -5px rgba(0,0,0,0.3);
+	-moz-box-shadow: 0px 5px 10px -5px rgba(0,0,0,0.3);
+	box-shadow: 0px 5px 5px -5px rgba(0,0,0,0.3);
 }
 
 .images__menu{
