--- a/GoIT/markup/lesson7-8/css/mediaqueries.css
+++ b/GoIT/markup/lesson7-8/css/mediaqueries.css
@@ -17,7 +17,7 @@
 	display: none;
 }
 
-.menu--header--less768{
+.menu--header--less960{
 	position: absolute;
 	overflow: hidden;
 	display: block;
@@ -128,6 +128,7 @@
 /* NEWS BLOCK */
 
 .news{
+	overflow: hidden;
 	height: 785px;
 }
 
@@ -237,7 +238,7 @@
 	height: 548px;
 }
 
-.menu--header--less768{
+.menu--header--less960{
 	margin-left: 24%;
 	margin-bottom: 95px;
 	width: 51%;
@@ -312,6 +313,7 @@
 
 .article__text--news{
 	width: 100%;
+	max-width: 390px;
 }
 
 .menu__news{
@@ -405,7 +407,7 @@
 	display: none;
 }
 
-.article__left--comments--less768{
+.article__left--comments--less960{
 	display: block;
 	padding-top: 80px;
 }
@@ -414,7 +416,7 @@
 	display: none;
 }
 
-.article__center--comments--less768{
+.article__center--comments--less960{
 	display: block;
 }
 
@@ -453,3 +455,586 @@
 
 }
 
+
+@media (min-width: 768px) {
+
+/* HEADER */
+
+.header{
+	height: 802px;
+}
+
+.heading2--header{
+	margin: 70px 0 0 20px;
+	width: auto;
+}
+
+.menu--header--less960{
+	display: block;
+	box-sizing: border-box;
+	float:left;
+	margin: 29px 0 72px 0px;
+	padding-left: 17px;
+	height: auto;
+	width: auto;
+}
+
+.menu__item--header{
+	display: block;
+	float: left;
+	margin: 0 50px 0 0;
+	border: none;
+}
+
+.menu--header:hover{
+	background: none;
+	border: none;
+	box-shadow: none;
+}
+
+.menu__item:hover{
+	background: none;
+}
+
+.menu__link--header{
+	line-height: 26px;
+    padding: 0 3px;
+}
+
+.menu__link--current{
+    display: block;
+    border-bottom: none;
+}
+
+.slider{
+	margin-top: 137px;
+	height: 400px;
+}
+
+.slider__arrow{
+	margin-top: 188px;
+}
+
+.slider__wrapper--inner {
+    width: 93%;
+}
+
+.heading1{
+	margin-bottom: 1px;
+	overflow: hidden;
+	height: 50px;
+	line-height: 50px;
+	font-size: 48px;
+}
+
+.article--slider{
+	max-width: 40%;
+}
+
+.heading3{
+	padding-bottom: 10px;
+	line-height: 28px;
+	font-size: 24px;
+}
+
+.article__text--slider{
+	display: block;
+	overflow: hidden;
+	height: 100px;
+	font-size: 16px;
+	line-height: 25px;
+}
+
+.slider__img{
+	margin-top: -23px;
+	margin-right: 2.9%;
+	width: 274px;
+	max-width: 47.5%;
+}
+
+.menu__slider{
+    right: 19%;
+    width: initial;
+}
+
+.menu__item-slider{
+	margin: 0;
+}
+
+/* END OF HEADER */
+
+/* MAIN */
+
+/* VIOLET BLOCK*/
+
+.violet_block{
+	height: 342px;
+}
+
+.article--violet_block{
+	margin: 0;
+	width: 33%;
+	padding-top: 77px;
+}
+
+.article__left{
+	float: left;
+}
+
+.article__right{
+	float: right;
+}
+
+.article__center{
+	float: none;
+	margin: 0 auto;
+}
+
+.article__left--violet_block{
+	background-position: -376px -67px;
+	padding-left: 83px;
+}
+
+.article__right--violet_block{
+	background-position: -375px -67px;
+	padding-left: 85px;
+}
+
+.article__center--violet_block{
+	background-position: -380px -67px;
+	padding-left: 80px;
+}
+
+.heading4{
+	font-size: 24px;
+	margin-bottom: 3px;
+}
+
+.article__text--violet_block{
+	height: 142px;
+}
+
+.article__link{
+	margin-top: 10px;
+}
+
+.article__link--left{
+	margin-right: 25px;
+}
+
+.article__link--right{
+	margin-right: 23px;
+}
+
+.article__link--center{
+	margin-right: 28px;
+}
+
+/* END OF VIOLET BLOCK */
+
+/* NEWS BLOCK */
+
+.news{
+	height: 480px;
+}
+
+.article__left--news{
+	padding-top: 29px;
+}
+
+.article__head{
+	margin-bottom: 8px;
+}
+
+.heading4--gray{
+	display: block;
+	margin-bottom: 0;
+}
+
+.article__text--news{
+	overflow: hidden;
+	height: 142px;
+}
+
+.article__left--news{
+	background-position: 0 0;
+    margin-right: 0;
+    padding-right: 25px;
+    width: 46%;
+    letter-spacing: -0.5px;
+}
+
+.menu__news{
+	width: 91%;
+}
+
+.menu__item--news{
+	margin-right: 1px;
+}
+
+.article__right--news{
+	margin: 97px 15px 0 0;
+	padding-top: 29px;
+    width: 38%;
+}
+
+.heading4--gray--less768{
+	font-size: 28px;
+	letter-spacing: 0.5px;
+}
+
+.article__text--news--bold{
+	height: auto;
+}
+
+.article__text--news--line{
+	width: 100%;
+	height: 26px;
+	letter-spacing: -1.5px;
+}
+
+.article__link--news{
+	display: none;
+}
+
+.article__link--news--less768{
+	display: block;
+    margin: 15px 11px 0 0;
+    font-size: 19px;
+    letter-spacing: -0.5px;;
+}
+
+/* END OF NEWS */
+
+/* IMAGES*/
+
+.images{
+	height: 120px;
+}
+
+.images__menu{
+	padding: 25px 0 0 0;
+	width: 100%;
+	float:none;
+	text-align: center;
+}
+
+.menu__item--images:nth-of-type(n+1){
+	position: static;
+	float: none;
+	display: inline-block;
+	margin: 0 27px;
+}
+
+.menu__item--images:nth-of-type(1){
+	margin-left: 0;
+}
+
+.menu__item--images:nth-of-type(6){
+	margin-right: 0;
+}
+
+/* END OF IMAGES*/
+
+/* COMMENTS BLOCK */
+
+.comments{
+	height: 396px;
+	background: #ececec;
+}
+
+.article--comments{
+	overflow: hidden;
+	height: 307px;
+	padding-top: 94px;
+	width: 29.3%;
+}
+
+.heading2--comments{
+	float: left;
+	text-shadow: 0 1px 0 white;
+	color: #454545;
+}
+
+.heading2--comments--er{
+	text-shadow: 0 1px 0 white;
+	color: #b9b9b9;
+}
+
+.heading4--comments{
+    display: block;
+    margin-top: 0px;
+    margin-bottom: 7px;
+    letter-spacing: 0;
+
+}
+
+.article__text--comments{
+	height: 170px;
+	text-shadow: 0.5px 0.9px 0 white;
+	color: #787878;
+	font-size: 16px;
+	line-height: 24px;
+	letter-spacing: -0.4px;
+}
+
+/* END OF COMMENTS */
+
+/* END OF MAIN */
+
+/* FOOTER */
+
+.footer{
+	height: 200px;
+	background: url(../img/footer_bg.jpg) 100% 100% no-repeat;
+	background-size: cover;
+}
+
+.menu--footer{
+	float: left;
+	margin: 46px 0 0 20px;
+	width: 95%;
+	font-size: 20px;
+}
+
+.menu__item--footer{
+    float: left;
+    margin: 0 44px  0 0;
+	
+}
+
+.menu__link--footer:hover{
+	border-bottom: 3px solid #edbfff;
+}
+
+.footer__text{
+	float: right;
+	padding: 36px 20px 0 0;
+}
+
+.footer__text--bold{
+	font-weight: 700;
+}
+
+/* END OF FOOTER */
+
+}
+
+
+@media (min-width: 960px) {
+
+/* HEADER */
+
+.header{
+	position: relative;
+	overflow: hidden;
+	height: 846px;
+}
+
+.heading2--header{
+	float: left;
+	margin-left: 0;
+}
+
+.menu--header{
+	display: block;
+	float: right;
+	margin-top: 74px;
+	width: 80%;
+}
+
+.menu--header--less960{
+	display: none;
+}
+
+.menu__item--header{
+	float: right;
+	margin-right: 0;
+	margin-left: 6.4%;
+}
+
+.slider{
+	margin-top: 280px;
+}
+
+.slider__wrapper{
+	max-width: 1555px;
+}
+
+.heading1{
+	font-size: 60px;
+	margin-bottom: 10px;
+}
+
+.heading3{
+	font-size: 32px;
+}
+
+.article--slider{
+	margin-left: 0;
+	width: 58%;
+	max-width: 58%;
+}
+
+.article__text--slider{
+	height: auto;
+	font-size: 18px;
+}
+
+.slider__img{
+	margin-right: 7.1%;
+	margin-top: -17px;;
+}
+
+.menu__slider{
+	right: 21%;
+}
+
+/* END OF HEADER */
+
+/* MAIN */
+
+/* VIOLET BLOCK*/
+
+.article--violet_block{
+	padding-top: 79px;
+	width: 33.33%;
+	height: 341px;;
+}
+
+.article__left--violet_block{
+	background: url(../img/icons.png) -396px -63px no-repeat;
+	padding-left: 65px;
+}
+
+.article__right--violet_block{
+	background: url(../img/icons.png)  -443px 74px no-repeat;
+	padding-left: 100px;
+}
+
+.article__center--violet_block{
+	background: url(../img/icons.png) -302px -187px no-repeat;
+	padding-left: 84px;
+}
+
+.heading4{
+	font-size: 30px;
+	letter-spacing: -0.2px;
+	margin-bottom: 10px;
+}
+
+.article__text--violet_block{
+	height: 120px;
+}
+
+/* END OF VIOLET BLOCK */
+
+/* NEWS BLOCK */
+
+.article__left{
+	margin-left: 0;
+}
+
+.heading4--gray{
+	display: inline;
+}
+
+.article__text--news{
+	height: auto;
+}
+
+.heading4--gray--less768{
+	display: block;
+	margin-bottom: 15px;
+	padding-bottom: 0;
+}
+
+.article__right--news{
+	width: 40%;
+}
+
+.news__link{
+	height: 52px;
+}
+
+.article__link--news{
+	display: block;
+	margin: 0 15px 0 0;
+}
+
+.article__link--news--less768{
+	display: none;
+}
+
+/* END OF NEWS */
+
+/* IMAGES*/
+
+.menu--images{
+	padding-top: 25px;
+}
+
+/* END OF IMAGES*/
+
+/* COMMENTS BLOCK */
+
+.article--comments{
+	display: block;
+}
+
+.article__left--comments--less960{
+	display: none;
+}
+
+.article__right--comments{
+	margin-right: 0;
+}
+
+.article__center--comments--less960{
+	display: none;
+}
+
+.copyright_text{
+	padding: 13px 0;
+	text-shadow: 0.5px 0.9px 0 white;
+	color: #c5c5c5;
+	font-family: Georgia;
+	font-size: 16px;
+	font-style: italic;
+}
+
+.heading4--comments{
+    display: block;
+    margin-top: 5px;
+    letter-spacing: 0;
+}
+
+/* END OF COMMENTS */
+
+/* END OF MAIN */
+
+/* FOOTER */
+
+.footer{
+	height: 112px;
+}
+
+.menu--footer{
+	margin-left: 0;
+	width: auto;
+}
+
+.menu__item--footer{
+    float: left;
+    margin: 0 44px  0 0;
+	
+}
+
+.footer__text{
+	margin-top: 54px;
+	padding: 0;
+}
+
+/* END OF FOOTER */
+
+}
