--- a/GoIT/markup/lesson7-8/css/mediaqueries.css
+++ b/GoIT/markup/lesson7-8/css/mediaqueries.css
@@ -3,12 +3,12 @@
 /* HEADER */
 
 .header{
-	height: 515px;
+	height: 516px;
 }
 
 .heading2--header{
 	display: inline-block;
-	margin: 68px auto 0 auto;
+	margin: 65px auto 0 auto;
 	width: 100%;
 	text-align: center;
 }
@@ -22,7 +22,7 @@
 	overflow: hidden;
 	display: block;
 	margin: 0 13%; 
-	top: 130px;
+	top: 141px;
 	width: 74%;
 	text-align: center;
 	z-index: 1;
@@ -77,13 +77,13 @@
 
 .menu__link--current{
 	display: inline;
-	padding: 0 3px;
+	padding: 0 5px;
 	border-bottom: 3px solid #edbfff;
 }
 
 .article--slider{
 	float: none;
-	margin-left: 14%;
+	margin-left: 15%;
 }
 
 .heading1{
@@ -92,6 +92,7 @@
 
 .heading3{
 	font-size: 18px;
+	line-height: 32px;
 }
 
 .article__text--slider{
@@ -105,22 +106,26 @@
 /* VIOLET BLOCK*/
 
 .violet_block{
-	height: 596px;
+	height: 598px;
 }
 
 .article__left--violet_block{
-	padding-left: 50px;
+	padding-left: 83px;
 	padding-top: 70px;
 }
 
+.heading4{
+	margin-bottom: 3px;
+}
+
 .article__right--violet_block{
-	padding-left: 50px;
-	padding-top: 66px;
+	padding-left: 82px;
+	padding-top: 60px;
 }
 
 .article__center--violet_block{
-	padding-left: 50px;
-	padding-top: 80px;
+	padding-left: 82px;
+	padding-top: 76px;
 }
 
 /* END OF VIOLET BLOCK */
@@ -137,29 +142,39 @@
 }
 
 .article__left--news{
-	margin-top: 97px;
-	padding-left: 60px;
-    padding-right: 45px;
+	margin-top: 87px;
+	padding: 4px 25px 0 59px;
+}
+
+.article__head {
+	margin-bottom: 3px;
+}
+
+.heading4--gray{
+	margin-bottom: 0;
 }
 
 .menu__news{
-	margin-top: 58px;
+	margin-top: 53px;
+	margin-left: 5%;
 }
 
 .article__right--news{
-	margin-top: 50px;
+	margin-top: 45px;
 }
 
 .heading4--gray--less768{
 	margin-bottom: 20px;
+	font-size: 30px;
 }
 
 .news__link{
-	margin-bottom: 15px;
+	margin-bottom: 17px;
 	padding-left: 64px;
 }
 
 .article__text--news{
+	padding-left: 3px;
 	height: 167px;
 }
 
@@ -178,11 +193,11 @@
 /* IMAGES*/
 
 .images{
-	height: 425px;
+	height: 421px;
 }
 
 .images__menu{
-	padding: 50px 40px 0 40px;
+	padding: 52px 40px 0 40px;
 	width: 100%;
 }
 
@@ -191,12 +206,41 @@
 }
 
 .menu__item--images:nth-of-type(odd){
-	float: right;
+	float: left;
 }
 
 .menu__item--images:nth-of-type(even){
-	display: block;
+	float: right;
 }
+
+.menu__item--images:nth-of-type(1){
+	margin-left: 22px;
+}
+
+.menu__item--images:nth-of-type(2){
+	margin-right: 22px;
+}
+
+.menu__item--images:nth-of-type(3){
+	clear: both;
+	margin-left: 30px;
+	margin-bottom: 39px;
+}
+
+.menu__item--images:nth-of-type(4){
+	margin-right: 30px;
+	margin-bottom: 39px;
+}
+
+.menu__item--images:nth-of-type(5){
+	margin-left: 2px;
+	clear: both;
+}
+
+.menu__item--images:nth-of-type(6){
+	margin-right: 1px;
+}
+
 
 /* END OF IMAGES*/
 
@@ -235,23 +279,36 @@
 /* HEADER */
 
 .header{
-	height: 548px;
+	height: 549px;
+}
+
+.heading2--header{
+	margin-top: 67px;
 }
 
 .menu--header--less960{
-	margin-left: 24%;
+	top: 135px;
+	margin-left: 24.6%;
 	margin-bottom: 95px;
-	width: 51%;
+	width: 50.3%;
+}
+
+.menu__item--header {
+	height: 40px;
+}
+
+.menu__item--last{
+	padding-top: 6px;
 }
 
 .slider{
 	margin-top: 94px;
-	height: 245px;
+	height: 241px;
 	background: rgba(0,0,0,0.2);
 }
 
 .slider__arrow{
-	margin-top: 102px;
+	margin-top: 100px;
 }
 
 .slider__wrapper--inner{
@@ -261,27 +318,27 @@
 .article--slider{
 	float: left;
 	margin-left: 16px;
-	padding-top: 100px;
+	padding-top: 95px;
 	width: 49%;
 }
 
 .heading3{
 	overflow: hidden;
-	height: 20px;
+	height: 24px;
 	letter-spacing: 0.1px;
 }
 
 .slider__img{
 	float: right;
     display: block;
-    margin-top: -10px;
-    margin-right: 12px;
-    width: 192px;
+    margin-top: -14px;
+    margin-right: 7px;
+    width: 191px;
 }
 
 .menu__slider{
 	position: absolute;
-    margin-top: 20px;
+    margin-top: 22px;
 }
 
 /* END OF HEADER */
@@ -291,7 +348,21 @@
 /* VIOLET BLOCK*/
 
 .article--violet_block{
-	margin: 0 20px;
+	padding-right: 15px;
+}
+
+.article__left--violet_block{
+	padding-top: 77px;
+	background-position: -376px -67px;
+}
+
+.article__link{
+	margin-right: 12px;
+}
+
+.article__center--violet_block{
+	padding-top: 64px;
+	background-position: -376px -80px;
 }
 
 /* END OF VIOLET BLOCK */
@@ -308,7 +379,7 @@
 }
 
 .article__head{
-	margin-bottom: 25px;
+	margin: 8px 0 16px 3px;
 }
 
 .article__text--news{
@@ -317,15 +388,17 @@
 }
 
 .menu__news{
-	margin-top: 60px;
+	margin-top: 58px;
+	margin-left: -23px;
 }
 
 .article__right--news{
-	margin-left: 80px;
+	margin-left: 83px;
 }
 
 .heading4--gray--less768{
 	display: block;
+	margin-bottom: 0;
 	padding-bottom: 20px;
 }
 
@@ -334,7 +407,7 @@
 }
 
 .article__link--news--less768{
-	margin-right: 46px;
+	margin-right: 40px;
 }
 
 /* END OF NEWS */
@@ -342,11 +415,11 @@
 /* IMAGES*/
 
 .images{
-	height: 230px;
+	height: 232px;
 }
 
 .images__menu{
-	padding-top: 40px;
+	padding-top: 37px;
 	width: 100%;
 }
 
@@ -364,30 +437,30 @@
 
 .menu__item--images:nth-of-type(2){
 	position: absolute;
-	left: 44%;
+	left: 43%;
 }
 
 .menu__item--images:nth-of-type(3){
 	position: absolute;
-	right: 2%;
+	right: 5.5%;
 }
 
 .menu__item--images:nth-of-type(4){
 	position: absolute;
-	top: 140px;
-	left: 10%;
+	top: 127px;
+	left: 14%;
 }
 
 .menu__item--images:nth-of-type(5){
 	position: absolute;
-	top: 140px;
-	left: 41%;
+	top: 127px;
+	left: 36%;
 }
 
 .menu__item--images:nth-of-type(6){
 	position: absolute;
-	top: 140px;
-	right: 0%;
+	top: 127px;
+	right: 2.5%;
 }
 
 /* END OF IMAGES*/
@@ -396,11 +469,12 @@
 
 .comments{
 	display: block;
+	height: 668px;
 }
 
 .article--comments{
 	margin: 0 20px; 
-	padding-bottom: 65px;
+	padding-bottom: 52px;
 }
 
 .article__left--comments{
@@ -409,7 +483,7 @@
 
 .article__left--comments--less960{
 	display: block;
-	padding-top: 80px;
+	padding-top: 76px;
 }
 
 .article__center--comments{
@@ -423,11 +497,12 @@
 .heading4--comments{
 	display: block;
 	margin-bottom: 10px;
+	font-size: 24px;
 }
 
 .article__text--comments{
 	overflow: hidden;
-	height: 120px;
+	height: 97px;
 }
 
 /* END OF COMMENTS */
@@ -439,12 +514,12 @@
 .menu--footer{
 	display: block;
 	width: 95%;
-	margin: 48px 5% 30px 5%;
+	margin: 40px 5% 27px 5%;
 }
 
 .menu__item--footer{
 	float: left;
-	margin-right: 5%;
+	margin-right: 5.4%;
 }
 
 .menu__link--footer--last{
@@ -461,11 +536,11 @@
 /* HEADER */
 
 .header{
-	height: 802px;
+	height: 798px;
 }
 
 .heading2--header{
-	margin: 70px 0 0 20px;
+	margin: 66px 0 0 20px;
 	width: auto;
 }
 
@@ -473,7 +548,7 @@
 	display: block;
 	box-sizing: border-box;
 	float:left;
-	margin: 29px 0 72px 0px;
+	margin: 7px 0 0 0;
 	padding-left: 17px;
 	height: auto;
 	width: auto;
@@ -482,8 +557,12 @@
 .menu__item--header{
 	display: block;
 	float: left;
-	margin: 0 50px 0 0;
+	margin: 0 46px 0 0;
 	border: none;
+}
+
+.menu__item--last{
+	padding-top: 0;
 }
 
 .menu--header:hover{
@@ -507,12 +586,12 @@
 }
 
 .slider{
-	margin-top: 137px;
+	margin-top: 130px;
 	height: 400px;
 }
 
 .slider__arrow{
-	margin-top: 188px;
+	margin-top: 182px;
 }
 
 .slider__wrapper--inner {
@@ -520,7 +599,7 @@
 }
 
 .heading1{
-	margin-bottom: 1px;
+	margin-bottom: 3px;
 	overflow: hidden;
 	height: 50px;
 	line-height: 50px;
@@ -533,8 +612,9 @@
 
 .heading3{
 	padding-bottom: 10px;
-	line-height: 28px;
+	line-height: 32px;
 	font-size: 24px;
+	letter-spacing: 0;
 }
 
 .article__text--slider{
@@ -547,13 +627,14 @@
 
 .slider__img{
 	margin-top: -23px;
-	margin-right: 2.9%;
+	margin-right: 2.7%;
 	width: 274px;
 	max-width: 47.5%;
 }
 
 .menu__slider{
-    right: 19%;
+	margin-top: 37px;
+    right: 18.8%;
     width: initial;
 }
 
@@ -596,13 +677,13 @@
 }
 
 .article__right--violet_block{
-	background-position: -375px -67px;
-	padding-left: 85px;
+	background-position: -378px -67px;
+	padding-left: 82px;
 }
 
 .article__center--violet_block{
-	background-position: -380px -67px;
-	padding-left: 80px;
+	background-position: -381px -67px;
+	padding-left: 78px;
 }
 
 .heading4{
@@ -619,15 +700,15 @@
 }
 
 .article__link--left{
-	margin-right: 25px;
+	margin-right: 10px;
 }
 
 .article__link--right{
-	margin-right: 23px;
+	margin-right: 12px;
 }
 
 .article__link--center{
-	margin-right: 28px;
+	margin-right: 15px;
 }
 
 /* END OF VIOLET BLOCK */
@@ -635,7 +716,7 @@
 /* NEWS BLOCK */
 
 .news{
-	height: 480px;
+	height: 485px;
 }
 
 .article__left--news{
@@ -657,7 +738,7 @@
 }
 
 .article__left--news{
-	background-position: 0 0;
+	background-position: 0 12px;
     margin-right: 0;
     padding-right: 25px;
     width: 46%;
@@ -665,7 +746,8 @@
 }
 
 .menu__news{
-	width: 91%;
+	margin-top: 70px;
+	margin-left: -25px;
 }
 
 .menu__item--news{
@@ -674,8 +756,8 @@
 
 .article__right--news{
 	margin: 97px 15px 0 0;
-	padding-top: 29px;
-    width: 38%;
+	padding-top: 30px;
+    width: 44%;
 }
 
 .heading4--gray--less768{
@@ -699,7 +781,7 @@
 
 .article__link--news--less768{
 	display: block;
-    margin: 15px 11px 0 0;
+    margin: 0 10px 0 0;
     font-size: 19px;
     letter-spacing: -0.5px;;
 }
@@ -746,8 +828,16 @@
 .article--comments{
 	overflow: hidden;
 	height: 307px;
-	padding-top: 94px;
+	padding-top: 98px;
 	width: 29.3%;
+}
+
+.article__right--comments{
+	padding-left: 26px;
+}
+
+.article__center--comments--less960{
+	padding-left: 15px;
 }
 
 .heading2--comments{
@@ -792,7 +882,7 @@
 
 .menu--footer{
 	float: left;
-	margin: 46px 0 0 20px;
+	margin: 41px 0 0 20px;
 	width: 95%;
 	font-size: 20px;
 }
@@ -809,11 +899,13 @@
 
 .footer__text{
 	float: right;
-	padding: 36px 20px 0 0;
+	padding: 26px 20px 0 0;
+	letter-spacing: -0.2px;
 }
 
 .footer__text--bold{
 	font-weight: 700;
+	padding-left: 2px;
 }
 
 /* END OF FOOTER */
