--- a/GoIT/markup/js_11-12/css/style.css
+++ b/GoIT/markup/js_11-12/css/style.css
@@ -1,7 +1,68 @@
+.wrapper {
+    margin: 40px auto;
+    width: 700px;
+    border: 1px solid dimgrey;
+    border-radius: 5px;
+    -webkit-box-shadow: 0px 0px 6px 3px rgba(0,0,0,0.6);
+    -moz-box-shadow: 0px 0px 6px 3px rgba(0,0,0,0.6);
+    box-shadow: 0px 0px 6px 3px rgba(0,0,0,0.6);
+}
+
 h1{
     margin: 15px;
     text-align: center;
     font-size: 24px;
+}
+
+.user-info {
+    text-align: center;
+}
+
+.user-change {
+    margin: 10px 20px;
+    padding: 10px;
+    width: 60px;
+    display: inline-block;
+    text-decoration: none;
+    color: black;
+    background-color: white;
+    border: 1px solid dimgrey;
+    border-radius: 5px;
+    transition: all linear 0.3s;
+}
+
+.user-change:hover {
+    color: white;
+    background-color: black;
+}
+
+.login-wrapper {
+    float: right;
+    margin: 10px 15px;
+    padding: 10px;
+    width: 350px;
+    border: 1px solid grey;
+    border-radius: 5px;
+    -webkit-box-shadow: -3px 3px 5px 0px rgba(0,0,0,0.6);
+    -moz-box-shadow: -3px 3px 5px 0px rgba(0,0,0,0.6);
+    box-shadow: -3px 3px 5px 0px rgba(0,0,0,0.6);
+}
+
+.clearfix:after {
+    display: block;
+    content: '';
+    clear: both;
+}
+
+.user-name {
+    margin: 10px;
+    text-align: center;
+    font-size: 18px;
+}
+
+.user-icon {
+    margin: 10px;
+    width: 100px;
 }
 
 .carousel-list {
@@ -25,8 +86,12 @@ h1{
     padding: 10px;
     width: 650px;
     border: 1px solid grey;
+    border-radius: 5px;
     overflow: hidden;
     text-align: center;
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.6);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.6);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.6);
 }
 
 .carousel-controls {
