Finished jQuery plugin. Everything is working.

--- a/My projects/Test for Frontend - jquery plugin/css/style.css
+++ b/My projects/Test for Frontend - jquery plugin/css/style.css
@@ -28,7 +28,11 @@
     clear: both;
 } */
 
-#geo-selector p{
+#regions {
+    margin: 5px;
+}
+
+#cities{
     float: right;
     margin: 5px;
     width: calc(60% - 10px);
