JS #15-16 improved functionality.

--- a/GoIT/markup/js_15-16/css/style.css
+++ b/GoIT/markup/js_15-16/css/style.css
@@ -80,6 +80,11 @@ a:visited {
     margin: 10px;
 }
 
-.search-more {
+.more-results-list a {
     padding: 0 6px;
+}
+
+.active {
+    color: red;
+    text-decoration: underline;
 }
