--- a/GoIT/markup/js_19-20/client_src/scss/partials/app.scss
+++ b/GoIT/markup/js_19-20/client_src/scss/partials/app.scss
@@ -1,11 +1,4 @@
-body {
-    margin: 20px auto;
+.wrapper {
+  width: 1160px;
 }
 
-.header {
-    background: #bbbbbb;
-}
-
-.content {
-    color: blue;
-}
