--- a/GoIT/markup/js_19-20/client_src/template/header.html
+++ b/GoIT/markup/js_19-20/client_src/template/header.html
@@ -1,3 +1,28 @@
-<section class="header">
-    Header
-</section>
+<header class="wrapper">
+    <div class="header-upper">
+        <a href="#" class="logo">
+            <img src="img/logo.png" class="logo__img">
+            <h1>Build Home</h1>
+            <p>Industrial Theme</p>
+        </a>
+        <ul class="socials">
+            <li class="socials__item facebook"></li>
+            <li class="socials__item twitter"></li>
+            <li class="socials__item rss"></li>
+            <li class="socials__item linkedin"></li>
+            <li class="socials__item skype"></li>
+        </ul>
+    </div>
+    <nav class="menu">
+        <ul class="main-menu">
+            <li class="main-menu__item"><a href="#">Home</a></li>
+            <li class="main-menu__item"><a href="#">Features</a></li>
+            <li class="main-menu__item"><a href="#">Services</a></li>
+            <li class="main-menu__item"><a href="#">News</a></li>
+            <li class="main-menu__item"><a href="#">Shop</a></li>
+            <li class="main-menu__item">
+                <input type="text" name="" id="" placeholder="Search">
+            </li>
+        </ul>
+    </nav>
+</header>
