--- a/GoIT/markup/js_19-20/client_src/template/content.html
+++ b/GoIT/markup/js_19-20/client_src/template/content.html
@@ -1,3 +1,86 @@
 <section>
-    <div class="wrapper">content</div>
+    <div class="wrapper">
+        <div class="slider">
+            slider :)
+        </div>
+        <section class="intro">
+            <div class="intro-article">
+                <span class="intro-article__number">01</span>
+                <div class="intro-article__inner">
+                    <h3 class="intro-article__header">Power Inside</h3>
+                    <p class="intro-article__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia 
+ptas sit aspernatur samomo enim ipsam voluptatem.</p>
+                    <a href="#" class="intro-article__more">Read More</a>
+                </div>
+            </div>
+            <div class="intro-article">
+                <span class="intro-article__number">02</span>
+                <div class="intro-article__inner">
+                    <h3 class="intro-article__header">New Technologies</h3>
+                    <p class="intro-article__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia 
+ptas sit aspernatur samomo enim ipsam voluptatem.</p>
+                    <a href="#" class="intro-article__more">Read More</a>
+                </div>
+            </div>
+            <div class="intro-article">
+                <span class="intro-article__number">03</span>
+                <div class="intro-article__inner">
+                    <h3 class="intro-article__header">Fast Support</h3>
+                    <p class="intro-article__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia 
+ptas sit aspernatur samomo enim ipsam voluptatem.</p>
+                    <a href="#" class="intro-article__more">Read More</a>
+                </div>
+            </div>
+        </section>
+    </div>
+</section>
+
+<section class="services">
+    <div class="wrapper">
+        <h2 class="services__header">Our Services</h2>
+        <ul class="services__articles">
+            <li class="services-article">
+                <a href="#" class="services-article__anchor">
+                    <div class="services-article__outer-image">
+                        <div class="services-article__inner-image"><img src=""></div>
+                    </div>
+                    <p class="services-article__title">Schedule Services</p>
+                </a>
+            </li>
+            <li class="services-article">
+                <a href="#" class="services-article__anchor">
+                    <div class="services-article__outer-image">
+                        <div class="services-article__inner-image"><img src=""></div>
+                    </div>
+                    <p class="services-article__title">Preventive Maintence</p>
+                </a>
+            </li>
+            <li class="services-article">
+                <a href="#" class="services-article__anchor">
+                    <div class="services-article__outer-image">
+                        <div class="services-article__inner-image"><img src=""></div>
+                    </div>
+                    <p class="services-article__title">Tire &amp; Wheel Services</p>
+                </a>
+            </li>
+            <li class="services-article">
+                <a href="#" class="services-article__anchor">
+                    <div class="services-article__outer-image">
+                        <div class="services-article__inner-image"><img src=""></div>
+                    </div>
+                    <p class="services-article__title">Repair Services</p>
+                </a>
+            </li>
+        </ul>
+    </div>
+</section>
+
+
+<section class="latest-news">
+    
+</section>
+
+
+<section class="anchors">
+    
 </section>
